# govee-ble-local

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROTOCOL.md  README.md  REIMPLEMENTATION_SCOPE.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DIAGNOSTICS.md
scripts/: check.sh
spec/: devices.schema.json  devices.yaml  govee_adv.ksy  govee_ble.ksy  govee_reference.py
spec/docs/: GOVEE_BLE_GATT_PROTOCOL.md  README.md  SCENE_UPLOAD_ENCODING.md  USING_THE_KSY.md
src/govee_ble_local/: __init__.py  client.py  const.py  crypto.py  debug.py  exceptions.py  identify.py  messages.py  models.py  profile.py  protocol.py  registry.py  scanner.py
src/govee_ble_local/_generated/: __init__.py  govee_ble_frame.py
src/govee_ble_local/ble/: __init__.py  controllers.py  frame.py  status.py
src/govee_ble_local/cloud/: __init__.py  account.py
src/govee_ble_local/devices/: __init__.py  base.py  device.py  light.py  plug.py  profile.py
src/govee_ble_local/devices/h5083/: NOTES.md  device.yaml
src/govee_ble_local/devices/h6006/: NOTES.md  device.yaml  scenes.yaml
src/govee_ble_local/devices/h6008/: NOTES.md  device.yaml  scenes.yaml
src/govee_ble_local/devices/h6052/: NOTES.md  device.yaml  scenes.yaml
src/govee_ble_local/devices/h60a6/: NOTES.md  device.yaml  scenes.yaml
src/govee_ble_local/devices/h61a8/: NOTES.md  device.yaml  scenes.yaml
src/govee_ble_local/scenes/: H6006.json  H6008.json  H6047.json  H6052.json  H60A6.json  H61A8.json  H6641.json  __init__.py
src/govee_ble_local/transport/: __init__.py  connection.py  framelog.py  handshake.py
src/govee_ble_local/wire/: __init__.py  build.py  describe.py  parse.py  reassemble.py
tests/: conftest.py  spec_frames.py  test_cloud.py  test_connection.py  test_device_v3.py  test_devices.py  test_dialect_b_upload.py  test_frame_analysis.py  test_h60a6_live.py  test_logging.py  test_messages.py  test_profile.py  test_protocol.py  test_protocol_bytes.py  test_spec_conformance.py  test_spec_frames.py  test_status.py  test_wire_build.py  test_wire_describe.py  test_wire_parse.py  test_wire_reassemble.py
tests/spec_gen/: govee_advertisement.py  govee_ble_frame.py
tools/: README.md  analyze_frame_log.py  btsnoop_mtu_scan.py  decode_btsnoop.py  decrypt_btsnoop.py  device_test.py  extract_govee_session.py  fetch_scene_catalog.py  fetch_scenes.py  gen_docs.sh  gen_kaitai.sh  h60a6_cct_choreography.py  h60a6_live_check.py  h60a6_segment_map_probe.py  kaitai_gen.js  live_probe.py  scene_sweep.py
