[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "govee-ble-local"
version = "0.1.0"
description = "Local Bluetooth LE control of Govee lights — no cloud, no LAN API."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Brady Woods" }]
requires-python = ">=3.11"
keywords = ["govee", "bluetooth", "ble", "home-assistant", "led", "light"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
]
dependencies = [
    "bleak>=0.21",
    "bleak-retry-connector>=3.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/bradywoods/govee-ble-local"
Repository = "https://github.com/bradywoods/govee-ble-local"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
govee_ble_local = ["py.typed"]
