[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "govee-ble-local"
version = "2.0.0.dev0"
description = "Local Bluetooth LE control of Govee lights — no cloud, no LAN API."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Brady Woods" }]
requires-python = ">=3.11"
keywords = ["govee", "bluetooth", "ble", "home-assistant", "led", "light"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
]
dependencies = [
    "bleak>=0.21",
    "bleak-retry-connector>=3.0.0",
    # Upper-bounded: this library is commonly installed alongside Home
    # Assistant, which pins cryptography tightly (e.g. ==48.0.1 as of HA
    # 2026.7) - an unbounded lower-bound-only spec here resolves to
    # whatever's newest on install, which can be ahead of HA core's pin and
    # break it on reinstall/upgrade (confirmed live: reinstalling this
    # package inside a running HA instance pulled cryptography 49.0.0,
    # conflicting with HA's 48.0.1 requirement). Revisit this ceiling
    # alongside HA core's own cryptography pin as it moves.
    "cryptography>=41.0.0,<49",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-cov"]
cloud = ["aiohttp>=3.9"]
typing = ["mypy", "types-PyYAML"]

[project.urls]
Homepage = "https://github.com/Brady-Woods/govee-ble-local"
Repository = "https://github.com/Brady-Woods/govee-ble-local"

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["bleak_retry_connector", "aiohttp"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["govee_ble_local"]
# client.py is the thin bleak I/O wrapper, exercised by the real-device suite
# in tools/ (device_test.py), not by unit tests - so exclude it from the
# unit-coverage gate rather than pretend it's unit-covered.
omit = ["*/client.py"]

[tool.coverage.report]
show_missing = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
govee_ble_local = ["py.typed", "devices/**/*.yaml", "devices/**/*.md"]
