[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "govee-ble-local"
version = "3.0.0.dev0"
description = "Local Bluetooth LE control of Govee devices — no cloud, no LAN API."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Brady Woods" }]
requires-python = ">=3.11"
keywords = ["govee", "bluetooth", "ble", "home-assistant", "led", "light"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
]
dependencies = [
    "bleak>=0.21",
    "bleak-retry-connector>=3.0.0",
    # Upper-bounded: this library is commonly installed alongside Home
    # Assistant, which pins cryptography tightly (e.g. ==48.0.1 as of HA
    # 2026.7) - an unbounded lower-bound-only spec here resolves to
    # whatever's newest on install, which can be ahead of HA core's pin and
    # break it on reinstall/upgrade (confirmed live: reinstalling this
    # package inside a running HA instance pulled cryptography 49.0.0,
    # conflicting with HA's 48.0.1 requirement). Revisit this ceiling
    # alongside HA core's own cryptography pin as it moves.
    "cryptography>=41.0.0,<49",
    # Runtime wire parser: the spec/*.ksy-generated readers under govee_ble_local/_generated
    # subclass KaitaiStruct + use KaitaiStream, so this is required at runtime. It is the ONE
    # accepted non-HA-default dependency — pure-Python, stdlib-only, zero-dep, MIT. The Kaitai
    # *compiler* (ksc, JS) stays a dev tool (tools/gen_kaitai.sh); the readers are committed.
    # See CLAUDE.local.md for the dependency policy (bleak / bleak-retry-connector / cryptography
    # are HA defaults; new runtime deps need justification; never require a version ahead of HA).
    "kaitaistruct>=0.10",
]

[project.scripts]
# Decode a captured session (JSONL frame log, or a govee_ble_local.frames logger dump via
# --from-frames-log) and report spec coverage/gaps. Available from an installed wheel.
govee-ble-analyze = "govee_ble_local.debug:main"

[project.urls]
Homepage = "https://github.com/Brady-Woods/govee-ble-local"
Repository = "https://github.com/Brady-Woods/govee-ble-local"
Changelog = "https://github.com/Brady-Woods/govee-ble-local/blob/master/CHANGELOG.md"

[project.optional-dependencies]
# Dev/test/docs only — NOT runtime. PyYAML + jsonschema validate spec/devices.yaml in the
# test suite (the runtime device table is hardcoded Python in devices/profile.py; nothing under
# src/ imports yaml). See CLAUDE.local.md for the dependency policy.
test = ["pytest", "pytest-asyncio", "pytest-cov", "jsonschema>=4.0", "PyYAML>=6.0"]
cloud = ["aiohttp>=3.9"]
typing = ["mypy", "types-PyYAML"]
docs = ["pdoc"]

[tool.pytest.ini_options]
# async fixtures/tests (e.g. tests/test_h60a6_live.py) run without per-test markers
asyncio_mode = "auto"
# only collect the test suite; tools/*_test.py are CLIs, not pytest modules
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["bleak_retry_connector", "aiohttp", "kaitaistruct"]
ignore_missing_imports = true

# Kaitai-generated readers — not hand-written, exclude from strict checking.
[[tool.mypy.overrides]]
module = ["govee_ble_local._generated.*"]
ignore_errors = true

[tool.coverage.run]
source = ["govee_ble_local"]
# client.py is the thin bleak I/O wrapper, exercised by the real-device suite
# in tools/ (device_test.py), not by unit tests - so exclude it from the
# unit-coverage gate rather than pretend it's unit-covered.
omit = ["*/client.py"]

[tool.coverage.report]
show_missing = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
govee_ble_local = ["py.typed", "scenes/*.json"]
